--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "gopizza",
-    "slug": "gopizza",
+    "name": "GoPizza",
+    "slug": "GoPizza",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
