--- a/ios/GoPizza.xcodeproj/xcshareddata/xcschemes/Go.xcscheme
+++ b/ios/GoPizza.xcodeproj/xcshareddata/xcschemes/Go.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "gopizza.app"
-               BlueprintName = "gopizza"
-               ReferencedContainer = "container:gopizza.xcodeproj">
+               BuildableName = "Go.app"
+               BlueprintName = "Go"
+               ReferencedContainer = "container:Go.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "gopizzaTests.xctest"
-               BlueprintName = "gopizzaTests"
-               ReferencedContainer = "container:gopizza.xcodeproj">
+               BuildableName = "GoTests.xctest"
+               BlueprintName = "GoTests"
+               ReferencedContainer = "container:Go.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "gopizza.app"
-            BlueprintName = "gopizza"
-            ReferencedContainer = "container:gopizza.xcodeproj">
+            BuildableName = "Go.app"
+            BlueprintName = "Go"
+            ReferencedContainer = "container:Go.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "gopizza.app"
-            BlueprintName = "gopizza"
-            ReferencedContainer = "container:gopizza.xcodeproj">
+            BuildableName = "Go.app"
+            BlueprintName = "Go"
+            ReferencedContainer = "container:Go.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
