--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/firestore": "^14.11.0",
     "expo": "^45.0.4",
     "expo-app-loading": "~2.0.0",
+    "expo-image-picker": "~13.1.1",
     "expo-linear-gradient": "~11.3.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
