--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "^14.11.0",
     "@react-native-firebase/auth": "^14.11.0",
     "@react-native-firebase/firestore": "^14.11.0",
+    "@react-native-firebase/storage": "^15.0.0",
     "expo": "^45.0.4",
     "expo-app-loading": "~2.0.0",
     "expo-image-picker": "~13.1.1",
