--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-native-firebase/auth": "^14.11.0",
     "@react-native-firebase/firestore": "^14.11.0",
     "@react-native-firebase/storage": "^15.0.0",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "expo": "^45.0.4",
     "expo-app-loading": "~2.0.0",
     "expo-image-picker": "~13.1.1",
@@ -27,6 +29,8 @@
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "start": "^5.1.0",
     "styled-components": "^5.3.5"
